appId: route.planner
---
- launchApp
- tapOn: "Reset password"
- assertVisible: 'Enter your email'
- tapOn:
    text: "Email"
    index: 1
- inputText: "routeplanner@testing.com"
- tapOn: "Accept"
- assertVisible: "An email has been sent to your address.*"
- tapOn: "Ok"
- assertNotVisible: "An email has been sent to your address.*"
